--- a/app/globals.css
+++ b/app/globals.css
@@ -19,10 +19,13 @@
     }
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     background: var(--background);
     color: var(--foreground);
-    overflow-y: overlay;
 }
 
 @font-face {
